main/default/objects/Assignment_Matrix_Query_Settings__mdt/Assignment_Matrix_Query_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Assignment Matrix Query Settings</label>
    <pluralLabel>Assignment Matrix Query Settings</pluralLabel>
</CustomObject>