main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Assignment_Object__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Object__c</fullName>
    <label>Assignment Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
                <default>true</default>
                <label>Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>