main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Is_Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Object</label>
    <type>Checkbox</type>
</CustomField>