main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Lookup_Field_API_name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_name__c</fullName>
    <label>Lookup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>