main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Object_Query__c.field-meta.xml
<CustomField>
    <fullName>Object_Query__c</fullName>
    <label>Object Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>