main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Indemnity</fullName>
                <default>true</default>
                <label>Professional Indemnity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>