main/default/objects/Assignment_Matrix_Query_Settings__mdt/fields/Related_Field_On_Primary_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_On_Primary_API_Name__c</fullName>
    <description>Related Field API name on Primary Object</description>
    <label>Related Field On Primary API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>